# negentropy

./: .gitignore  AGENTS.md  Cargo.toml  README.md  negentropy.toml  runseal.toml  vocabulary.toml
.github/: release.env.example
.github/scripts/release/assets/: checksums.sh  package.ps1  package.sh  verify.sh
.github/scripts/release/metadata/: beta.ts  stable.ts
.github/scripts/release/r2/: check.sh  publish.sh  summary.sh  verify.sh
.github/scripts/release/smoke/: smoke.ps1  smoke.sh
.github/workflows/: guard.yml  release-beta.yml  release-stable.yml
.runseal/hooks/: pre-commit
.runseal/lib/std/: cmd.ts
.runseal/templates/: cloudflare.env
.runseal/wrappers/: guard.ts  init.ts  land.ts
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/grammar/: Cargo.toml
crates/grammar/grammars/: rust.g4
crates/grammar/src/: format.rs  lex.rs  lib.rs  parse.rs  peg.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: config.rs  lib.rs
docs/: adapter-contract.md  principles.md  structure-json.md  vocabulary.md
