[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "negentropy"
path = "src/main.rs"

[dependencies]
kernel = { path = "../kernel" }
grammar = { path = "../grammar" }
clap = { version = "4.5", features = ["derive"] }
